end-infra-k8s-app/deploy-systemd-cluster/roles/post/templates/weave-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: weave
  namespace: weave
  annotations:
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: weave-auth
    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required'
spec:
  rules:
  - host: weave.cluster
    http:
      paths:
      - path: /
        backend:
          serviceName: weave-scope-app
          servicePort: 80
